{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 5,
  "lineage": "2015387e-37dc-a12b-8a5d-7e61613a3514",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975050298024:security-group/sg-014992cd081e414e5",
            "description": "Communication between all nodes in the cluster",
            "filter": null,
            "id": "sg-014992cd081e414e5",
            "name": "eksctl-mini-lambda-prod-cluster-ClusterSharedNodeSecurityGroup-ktuMO5DcFUpW",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Production",
              "Name": "eksctl-mini-lambda-prod-cluster/ClusterSharedNodeSecurityGroup",
              "Project": "Mini-Lambda",
              "alpha.eksctl.io/cluster-name": "mini-lambda-prod",
              "alpha.eksctl.io/cluster-oidc-enabled": "true",
              "alpha.eksctl.io/eksctl-version": "0.223.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "mini-lambda-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c66c795a3969dd03"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975050298024:vpc/vpc-0c66c795a3969dd03",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01539793cf80f268a",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-05c981f68aa103000",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c66c795a3969dd03",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b387851c7c93e283",
            "owner_id": "975050298024",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Production",
              "Name": "eksctl-mini-lambda-prod-cluster/VPC",
              "Project": "Mini-Lambda",
              "alpha.eksctl.io/cluster-name": "mini-lambda-prod",
              "alpha.eksctl.io/cluster-oidc-enabled": "true",
              "alpha.eksctl.io/eksctl-version": "0.223.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "mini-lambda-prod"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "managed_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975050298024:security-group/sg-0b548aac1a172312b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b548aac1a172312b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014992cd081e414e5"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014992cd081e414e5"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "mini-lambda-managed-sg-20260228134417281800000002",
            "name_prefix": "mini-lambda-managed-sg-",
            "owner_id": "975050298024",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c66c795a3969dd03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.eks_nodes",
            "data.aws_vpc.eks_vpc"
          ]
        }
      ]
    }
  ]
}